UI changes for inbox and order section

--- a/src/app/inbox/inbox.component.css
+++ b/src/app/inbox/inbox.component.css
@@ -2,13 +2,17 @@
   background:#EAEAEA;
   box-shadow: 1px 4px 6px #ccc;
   margin-bottom: 5px;
-  padding: 10px;
+  padding: 5px 10px;
 }
 .assign-order span {
-	margin: 2px 0px;
+	margin: 5px 0px 0px;
+  font-size: 14px;
 }
 .assign-order md-switch {
   margin: 0 0 0 15px;
+}
+select {
+  font-size: 14px;
 }
 .inbox-list {
   padding: 0px;
@@ -26,3 +30,5 @@ backgroud:#EAEAEA;
   overflow: auto;
   overflow-x: hidden;
 }
+
+
