--- a/src/app/inbox/item-views/audio-compact-view.css
+++ b/src/app/inbox/item-views/audio-compact-view.css
@@ -11,8 +11,9 @@
   right: 16px;
   top: 8px;
 }
-.list-label {
+.md-list-item-text h3.list-label {
   width: 90%;
+  font-weight: bold;
 }
 .pending{
   position: absolute;
@@ -45,4 +46,26 @@ md-list-item.selected {
 }
 audio {
   width: 80%;
+}
+
+audio::-webkit-media-controls-play-button {
+  color: green;
+}
+
+audio::-webkit-media-controls-panel {
+  background: none;
+}
+
+audio::-webkit-media-controls-volume-slider,
+audio::-webkit-media-controls-mute-button {
+  display: none;
+}
+
+audio::-moz-media-controls-panel {
+  background: none;
+}
+
+audio::-moz-media-controls-volume-slider,
+audio::-webkit-media-controls-mute-button {
+  display: none;
 }
