--- a/src/app/inbox/item-views/order-compact-view.html
+++ b/src/app/inbox/item-views/order-compact-view.html
@@ -10,7 +10,7 @@
     <!--<h4>{{ order.orderDate | date }}</h4>-->
     <p>{{ order.orderType }}</p>
     <!--<p>{{ order.defaultTask.status }}</p>-->
-    <p>{{ order.defaultTask.assignedTo }}</p>
+    <p><b>Assigned to: {{ order.defaultTask.assignedTo }}</b></p>
   </div>
   <md-list-item class="md-2-line user-avtar">
     <img [src]="'app/share/images/avtars/'+order.defaultTask.assignedTo + '.jpg'" class="md-avatar" alt="{{order.defaultTask.assignedTo}}"/>
