--- a/src/app/order/components/preview-order.component.html
+++ b/src/app/order/components/preview-order.component.html
@@ -25,7 +25,7 @@
 
   <div layout="row" layout-xs="column" layout-padding class="assigned-section">
     <div flex class="assigned-select">
-      <label flex>Assigned to :</label> {{}}
+      <label flex>Assigned to :</label>
       <img src="app/order/images/chat-box.svg" class="chat-icon" >
     </div>
     <div flex class="status-update">
@@ -47,7 +47,7 @@
 
     <div>
       <h3>Order Details: </h3>
-      <h4>Company Name:{{ currentOrder.companyName}}</h4>
+      <h4>Company Name: [( currentOrder.companyName )]</h4>
       <h4>Order assigned to: Chetan U.</h4>
       <h4>Completion Date:{{currentOrder.completionDate}}</h4>
       <h4>remarks:{{currentOrder.remarks}}</h4>
