--- a/src/app/order/components/create-order.component.css
+++ b/src/app/order/components/create-order.component.css
@@ -124,10 +124,10 @@ md-input-container {
   margin: 0px 0px 15px;
 }
 
-.right-top-section md-list-item, 
+.right-top-section md-list-item,
 .right-top-section md-list-item h3 {
   font-size: 14px;
-  margin-bottom: 3px;
+  margin-bottom: 0px;
   text-align: right;
 }
 
@@ -152,10 +152,10 @@ md-input-container {
   font-size: 18px;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 input[type=number] {
     -moz-appearance:textfield;
@@ -243,6 +243,10 @@ input[type=number] {
 .cancel {
   float: right;
 }
+.datepicker {
+  width :130px;
+}
+
 
 @media all and (max-width:1380px) and (min-width: 320px) {
   .assigned-section {
