UI changes for inbox section

--- a/src/app/inbox/inbox.component.html
+++ b/src/app/inbox/inbox.component.html
@@ -29,7 +29,7 @@
       </md-list>
     </div>
   </md-content>
-  <div layout="row" layout-fill layout-align="top center" flex="40">
+  <div layout="column" layout-fill layout-align="top center" flex="40">
     <router-outlet></router-outlet>
     <!--<ib-create-order flex>Loading...</ib-create-order>-->
     <!--<ib-preview-order *ngIf="type == 'Order'" flex>Loading...</ib-preview-order>-->
