--- a/src/app/order/components/create-order.component.html
+++ b/src/app/order/components/create-order.component.html
@@ -151,7 +151,7 @@
           </div>
         </div>
 
-        <div class="content-center" flex="20">
+        <div class="content-center remove-button" flex="20">
           <button md-raised-button class="md-raised md-warn" (click)="removeItem(item)">Remove</button>
         </div>
 
