single model in ui

--- a/src/app/order/components/preview-order.component.html
+++ b/src/app/order/components/preview-order.component.html
@@ -1,5 +1,4 @@
 <div class="orders">
-
   <div layout="row" layout-xs="column" class="right-top-section">
     <div flex>
       <md-list layout="column" layout-padding>
@@ -45,7 +44,7 @@
     <div>
       <h3>Order Details: </h3>
       <h4>Company Name: {{ currentOrder.companyName }}</h4>
-      <h4>Order assigned to: {{currentOrder.task.assignedTo}}</h4>
+      <!--<h4>Order assigned to: {{currentOrder.defaultTask.assignedTo}}</h4>-->
       <h4>Remarks:{{currentOrder.remarks}}</h4>
       <h4>Contact Person:{{currentOrder.contactPerson}}</h4>
       <h4>Contact Number:{{currentOrder.contactNumber}}</h4>
