--- a/src/app/order/components/create-order.component.html
+++ b/src/app/order/components/create-order.component.html
@@ -316,7 +316,7 @@
         </div>
         <div class="md-block" flex="100" layout-padding layout="row">
           <label flex="35">Order assigned to:</label>
-          <h3 flex="65">{{ currentOrder.task.assignedTo}}</h3>
+          <h3 flex="65">{{ currentOrder.defaultTask.assignedTo}}</h3>
         </div>
       </div>
 
@@ -353,18 +353,18 @@
         <div class="md-block address-section" flex="100" layout-padding layout="row">
           <label flex="35">Shipping Address:</label>
           <h3 flex="65">
-            <span>{{currentOrder.shippingAddress.line1}}</span>
-            <span>{{currentOrder.shippingAddress.line2}}</span>
-            <span>{{currentOrder.shippingAddress.city}} - {{currentOrder.shippingAddress.pinCode}} </span>
+            <span>{{currentOrder.shippingAddress.line1}},</span>
+            <span>{{currentOrder.shippingAddress.line2}},</span>
+            <span>{{currentOrder.shippingAddress.city}} - {{currentOrder.shippingAddress.pinCode}},</span>
             <span>{{currentOrder.shippingAddress.state}}</span>
           </h3>
         </div>
         <div class="md-block address-section" flex="100" layout-padding layout="row">
           <label flex="35">Billing Address:</label>
           <h3 flex="65">
-            <span>{{currentOrder.billingAddress.line1}}</span>
-            <span>{{currentOrder.billingAddress.line2}}</span>
-            <span>{{currentOrder.billingAddress.city}} - {{currentOrder.billingAddress.pinCode}}</span>
+            <span>{{currentOrder.billingAddress.line1}},</span>
+            <span>{{currentOrder.billingAddress.line2}},</span>
+            <span>{{currentOrder.billingAddress.city}} - {{currentOrder.billingAddress.pinCode}},</span>
             <span>{{currentOrder.billingAddress.state}}</span>
           </h3>
         </div>
