time ago in inbox and dilevary by fixed.

--- a/src/app/inbox/item-views/email-compact-view.css
+++ b/src/app/inbox/item-views/email-compact-view.css
@@ -50,3 +50,11 @@ audio {
 .email-compact {
   cursor: pointer;
 }
+
+.active {
+  background-color: red;
+}
+.disabled {
+  color: gray;
+  border: medium solid gray;
+}
