--- a/src/app/inbox/item-views/email-compact-view.html
+++ b/src/app/inbox/item-views/email-compact-view.html
@@ -1,6 +1,6 @@
-<md-list-item class="md-3-line email-compact"  [ngClass]="{active: isOn, disabled: isDisabled}"
-              (click)="toggle(!isOn)">
-  <div [ngClass]="{pending: isPending, inProgress: isInProgress, complete : isComplete}"> </div>
+<md-list-item class="md-3-line email-compact"  [class.selected]="selected === 'Inbox' "
+              (click)="select('Inbox')">
+  <div [class.selected]="selected === 'Inbox' " (click)="select('Inbox')"> </div>
   <div class="client-section">
     <span><img src="app/inbox/images/email.png"> </span>
     <img [src]="'app/share/images/company-logo/'+email.fromCompany + '.png'" class="md-avatar client-img" alt="{{email.from}}"/>
@@ -38,7 +38,7 @@
     <template md-tab label="Content">
       <md-content class="md-padding">
 
-        <div>{{ email.text}}</div>
+        <p [innerHTML]="email.html"></p>
       </md-content>
     </template>
     <template md-tab label="Attachments">
